--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,12 @@ li::marker {
   content: '\261B';
 }
 
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
